--- a/sites/all/themes/maav/css/navigation.css
+++ b/sites/all/themes/maav/css/navigation.css
@@ -50,7 +50,7 @@ li a.active {
 .block-menu {
 }
 
-.block-menu li {
+.block-menu .content li {
   height: 35px;
   background: #3A5E8C;
   margin: 10px 0 10px 0 !important;
