--- a/sites/all/themes/maav2/css/navigation.css
+++ b/sites/all/themes/maav2/css/navigation.css
@@ -72,7 +72,16 @@ ul.menu li {
 }
 ul.menu li.collapsed {}
 ul.menu li.expanded  {}
-ul.menu li.leaf      {}
+ul.menu li.leaf      {
+  border-bottom: black solid 3px;
+  margin-right: 30px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  font-weight: bolder;
+}
+ul.menu li.leaf.last {
+  border-bottom: none;
+}
 
 ul.menu li a:link,
 ul.menu li a:visited {}
