Major updates, configured mostly the way I want it

--- a/sites/all/themes/maav2/css/blocks.css
+++ b/sites/all/themes/maav2/css/blocks.css
@@ -95,6 +95,7 @@
   border-right: white dashed 6px;
   display: inline-block;
   width: 12%;
+  vertical-align: middle;
 }
 
 .section-info-info {
@@ -102,6 +103,7 @@
   padding-left: 10px;
   display: inline-block;
   width: 80%;
+  vertical-align: middle;
 }
 
 .section-info-info .block-title {
