Updaing theming again

--- a/sites/all/themes/maav2/css/blocks.css
+++ b/sites/all/themes/maav2/css/blocks.css
@@ -104,6 +104,7 @@
   display: inline-block;
   width: 80%;
   vertical-align: middle;
+  padding-bottom: 10px;
 }
 
 .section-info-info .block-title {
