--- a/sites/all/themes/maav2/css/page.css
+++ b/sites/all/themes/maav2/css/page.css
@@ -10,6 +10,7 @@
   margin: 0 10px;
   display: inline-block;
   vertical-align: middle;
+  max-width: 290px;
 }
 #page > header > hgroup {
   margin: 0 10px;
