Fixing more css issues, forcing ldap load

--- a/sites/all/themes/maav2/css/navigation.css
+++ b/sites/all/themes/maav2/css/navigation.css
@@ -55,6 +55,7 @@ a:focus {}
 .nav ul.menu li a:focus,
 .nav ul.menu li a:active  {
   background-color: #FFFFDF;  
+  color: black;
 }
 
 .nav ul.menu li a.active {
