--- a/sites/all/themes/maav2/css/navigation.css
+++ b/sites/all/themes/maav2/css/navigation.css
@@ -68,6 +68,19 @@ a:focus {}
 }
 
 /* Menus */
+#block-system-user-menu li {
+  list-style-type: none;
+  list-style-image: none;
+  display: inline;
+}
+#block-system-user-menu li.leaf {
+  border: none;
+}
+#block-system-user-menu ul.menu li a:hover,
+#block-system-user-menu ul.menu li a:focus,
+#block-system-user-menu ul.menu li a:active {
+  color: black;
+}
 ul.menu {
   margin-left: 15px;
 }
